<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/main_layout"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/main_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/main_bg"

        />

    <ImageView
        android:id="@+id/main_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="430dp"
        android:src="@drawable/logo" />

    <LinearLayout
        android:id="@+id/startLayout"
        android:layout_width="wrap_content"
        android:layout_height="270dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="140dp"
        android:orientation="vertical"
        android:padding="10dp">

        <Button
            android:id="@+id/buttonStart"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/btn_stroke_black_press_white"
            android:padding="9dp"
            android:text="@string/start"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"/>
        <Button
            android:id="@+id/buttonSettings"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/btn_stroke_black_press_white"
            android:padding="9dp"
            android:paddingEnd="20dp"
            android:paddingStart="20dp"
            android:text="@string/settings"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:layout_marginBottom="5dp"/>
        <Button
            android:id="@+id/buttonExit"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/btn_stroke_black_press_white"
            android:padding="9dp"
            android:text="@string/exit"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:layout_marginBottom="5dp"/>


    </LinearLayout>
</RelativeLayout>