<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialogfon"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="10dp"
    android:background="@drawable/dialogbg_rounded"
    android:orientation="vertical"
    android:scaleType="centerCrop">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/btnclose"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="start"
            android:background="@drawable/btn_stroke_black_press_white"
            android:gravity="center"
            android:text="&#60;"
            android:textColor="@color/true_white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/startLayout"
            android:layout_width="wrap_content"
            android:layout_height="270dp"
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_marginTop="50dp">

            <Button
                android:id="@+id/btnReset"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:background="@drawable/btn_stroke_black_press_white"
                android:padding="9dp"
                android:paddingEnd="20dp"
                android:paddingStart="20dp"
                android:text="@string/reset"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_marginBottom="5dp" />

            <Button
                android:id="@+id/btnOpenAll"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:background="@drawable/btn_stroke_black_press_white"
                android:padding="9dp"
                android:paddingEnd="20dp"
                android:paddingStart="20dp"
                android:text="@string/openAll"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_marginBottom="5dp" />

            <Button
                android:id="@+id/btnBack"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:background="@drawable/btn_stroke_black_press_white"
                android:padding="9dp"
                android:paddingEnd="20dp"
                android:paddingStart="20dp"
                android:text="@string/back"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_marginBottom="5dp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>